--- a/.config
+++ b/.config
@@ -848,6 +848,7 @@ CONFIG_MTD_PHYSMAP_OF=y
 #
 # CONFIG_MTD_PMC551 is not set
 # CONFIG_MTD_DATAFLASH is not set
+CONFIG_MTD_M25P80=y
 # CONFIG_MTD_SST25L is not set
 # CONFIG_MTD_SLRAM is not set
 # CONFIG_MTD_PHRAM is not set
@@ -883,7 +884,8 @@ CONFIG_MTD_NAND_IDS=y
 #
 # CONFIG_MTD_LPDDR is not set
 # CONFIG_MTD_LPDDR2_NVM is not set
-# CONFIG_MTD_SPI_NOR is not set
+CONFIG_MTD_SPI_NOR=y
+CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_WL_THRESHOLD=4096
 CONFIG_MTD_UBI_BEB_LIMIT=20
@@ -1641,15 +1643,16 @@ CONFIG_SPI_CADENCE=y
 # CONFIG_SPI_TOPCLIFF_PCH is not set
 # CONFIG_SPI_TXX9 is not set
 # CONFIG_SPI_XCOMM is not set
-CONFIG_SPI_XILINX=y
-CONFIG_SPI_ZYNQ_ZED_PL=y
+# CONFIG_SPI_XILINX is not set
+# CONFIG_SPI_ZYNQ_ZED_PL is not set
+CONFIG_NEW_SPI_ZYNQ_ZED_PL=y
 # CONFIG_SPI_XTENSA_XTFPGA is not set
 # CONFIG_SPI_DESIGNWARE is not set
 
 #
 # SPI Protocol Masters
 #
-# CONFIG_SPI_SPIDEV is not set
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPMI is not set
 # CONFIG_HSI is not set
