--- a/arch/arm/boot/dts/zynq-zed.dts
+++ b/arch/arm/boot/dts/zynq-zed.dts
@@ -240,13 +240,19 @@
 #endif
 
 		} ;
-                plspi0:zedplspi@7AA00000 { /*  pl spi beanhuo add*/
+                spi1: spi@7AA00000 { /*  pl spi beanhuo add*/
 			compatible = "zynq,zed-plspi";
 			interrupts = <0 59 4>;
 			interrupt-parent = <&ps7_scugic_0>;
 			is-dual = <0>;
 			num-chip-select = <1>;
-			reg = <0x7AA00000 0x1000>;/*<0x20000000,0x1000>;*/
+			reg = <0x7AA00000 0x1000>,
+#if 1
+			      <0x7AB00000 0x1000>,
+			      <0x7AC00000 0x1000>,
+			      <0x40400000 0x1000>;
+#endif
+			/*<0x20000000,0x1000>;*/
 			#address-cells = <1>;
 			#size-cells = <0>;
 			flash@0 {
@@ -256,13 +262,14 @@
                                  #address-cells = <1>;
                                  #size-cells = <1>;
                                  partition@qspi-fsbl-uboot {
-                                         label = "env";
+                                         label = "spi_test0";
                                          reg = <0x0 0x800000>;/* 8MB */
                                  };
                                  partition@qspi-linux {
-                                         label = "uboot";
+                                         label = "spi_test1";
                                          reg = <0x800000 0x800000>;
                                  };
+#if 0
                                  partition@qspi-device-tree {
                                          label = "kernel";
                                          reg = <0x1000000 0x800000>;
@@ -271,8 +278,14 @@
                                          label = "user_data";
                                          reg = <0x1800000 0x800000>;
                                  };
+#endif
 				};
 		};
+		
+		m25p80: m25p80{
+			compatible = "m25p80";
+			};
+
 		ps7_qspi_linear_0: ps7-qspi-linear@fc000000 {
 			clock-names = "ref_clk", "aper_clk";
 			clocks = <&clkc 10>, <&clkc 43>;
