--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -89,4 +89,5 @@ obj-$(CONFIG_SPI_TXX9)			+= spi-txx9.o
 obj-$(CONFIG_SPI_XCOMM)		+= spi-xcomm.o
 obj-$(CONFIG_SPI_XILINX)		+= spi-xilinx.o
 obj-$(CONFIG_SPI_ZYNQ_ZED_PL)           += spi-zynq-plspi.o
+obj-$(CONFIG_NEW_SPI_ZYNQ_ZED_PL)	+= spi-zynq-spi.o
 obj-$(CONFIG_SPI_XTENSA_XTFPGA)		+= spi-xtensa-xtfpga.o
